--- a/index.html
+++ b/index.html
@@ -125,10 +125,58 @@
 		</div>
 		<!-- right sidebar with friends info -->
 		<div id="right">
-		</div>
-	</div>
+            <div id="announcements">
+                <div class="announce-entry">Birthdays!</div>
+                <div class="announce-entry">Events!</div>
+            </div>
+            <div class="sponsored">
+                <div class="sponsor-entry">Sponsored!</div>
+                <div class="sponsor-entry">
+                    <div class="sponsor-title">Sponsored!</div>
+                    <div class="sponsor-img">
+                        <img src="http://placehold.it/50x50">
+                    </div>
+                    <div class="sponsor-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet</div>
+                </div>
+                <div class="sponsor-entry">
+                    <div class="sponsor-title">Sponsored!</div>
+                    <div class="sponsor-img">
+                        <img src="http://placehold.it/50x50">
+                    </div>
+                    <div class="sponsor-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet</div>
+                </div>
+                <div class="sponsor-entry">
+                    <div class="sponsor-title">Sponsored!</div>
+                    <div class="sponsor-img">
+                        <img src="http://placehold.it/50x50">
+                    </div>
+                    <div class="sponsor-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet</div>
+                </div>
+                <div class="sponsor-entry">
+                    <div class="sponsor-title">Sponsored!</div>
+                    <div class="sponsor-img">
+                        <img src="http://placehold.it/50x50">
+                    </div>
+                    <div class="sponsor-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet</div>
+                </div>
+                <div class="sponsor-entry">
+                    <div class="sponsor-title">Sponsored!</div>
+                    <div class="sponsor-img">
+                        <img src="http://placehold.it/50x50">
+                    </div>
+                    <div class="sponsor-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet</div>
+                </div>
+                <div class="sponsor-entry">
+                    <div class="sponsor-title">Sponsored!</div>
+                    <div class="sponsor-img">
+                        <img src="http://placehold.it/50x50">
+                    </div>
+                    <div class="sponsor-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet</div>
+                </div>
+            </div>
+        </div>
 
-</div>
+    </div>
 
 </body>
 </html>
